[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://ObjectArt/DropShadows.png" type="Texture" id=2]
[ext_resource path="res://Audio/dash-f.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/walk_-_make_it_quiet.wav" type="AudioStream" id=4]
[ext_resource path="res://ObjectArt/player_sprite_sheet.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "dash_left",
"speed": 20.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dash_right",
"speed": 20.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "left",
"speed": 6.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "right",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 13.0
height = 36.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.154545 ), 0.0, 0.0, 0, 0, Vector2( 0.978022, 0.963636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 4, 4 )
z_index = -1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 10, 16, 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -42 )
scale = Vector2( 4, 4 )
frames = SubResource( 6 )
animation = "idle_right"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 13 )

[node name="DashingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 31 )
z_index = -1
emitting = false
lifetime = 0.2
local_coords = false
gravity = Vector2( 0, 0 )
angle = 720.0
angle_random = 1.0
scale_amount = 30.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 1.75

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.869
pitch_scale = 1.46

[connection signal="timeout" from="DashingTimer" to="." method="_on_DashingTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_DashCooldownTimer_timeout"]
